<resources>
    <string name="app_name">NeoTicket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_connection">Отсутствует интернет соединение</string>
    <string name="try_again">Попробуйте подключится через мобильный интернет</string>
    <string name="agree">Понятно</string>
    <string name="often_questions">Частые вопросы</string>
    <string name="all_movie_details">Все детали о фильме</string>
    <string name="full_desc">Полное описание</string>
    <string name="gallery">Галерея</string>
    <string name="schedule">Расписание сеансов</string>
    <string name="all_places">Все места</string>
    <string name="choose_place">Выберите место</string>
    <string name="asanbay_center">Асанбай центр</string>
    <string name="center_stadion">Центральный Стадион</string>
    <string name="sport_palace">Дворец спорта</string>
    <string name="night_club_nosorog">Ночной клуб Носорог</string>
    <string name="philarmonic">Филармония</string>
    <string name="retro_metro">Ретро метро</string>
    <string name="apply">Применить</string>
    <string name="clear_filter">Очистить фильтр</string>
    <string name="date">Дата</string>
    <string name="time_is_up">Время оплаты истекло</string>
    <string name="return_back_to_buy_ticket">Вам придется вернуться к выбору билета</string>
    <string name="return_back">Вернуться</string>
    <string name="sport">Спорт</string>
    <string name="fok_gazprom">ФОК \"Газпром\"</string>
    <string name="spartak">Стадион Спартак имени Долона Омурзакова</string>
    <string name="stadion_spartak">Стадион Спартак</string>
    <string name="m_resort_spa_casino_henderson">M Resort Spa Casino, Henderson</string>
    <string name="moody_center_austin">Moody Center, Austin</string>
    <string name="buy_tickets">Купить билеты</string>
    <string name="theater">Театр</string>
    <string name="time_to_return_ticket_is_up">Время возврата билета истекло</string>
    <string name="return_ticket_question">Вы уверены что хотите вернуть билет?</string>
    <string name="cancel">Отмена</string>
    <string name="continue">Продолжить</string>
    <string name="return_home">Вернуться на главную</string>
</resources>