<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.concerts.ConcertLocationFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp">

            <TextView
                android:id="@+id/choose_place"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_bold"
                android:text="@string/choose_place"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/btn_search"
                style="@style/AppTheme.SearchView"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:iconifiedByDefault="false"
                android:queryHint="Поиск"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/choose_place" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:visibility="visible"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_search">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <RadioButton
                        android:id="@+id/rb_asanbay"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/asanbay_center"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <RadioButton
                        android:id="@+id/rb_cetnter_stadion"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/center_stadion"
                        app:layout_constraintEnd_toEndOf="@+id/rb_asanbay"
                        app:layout_constraintStart_toStartOf="@+id/rb_asanbay"
                        app:layout_constraintTop_toBottomOf="@+id/rb_asanbay" />

                    <RadioButton
                        android:id="@+id/rb_sport_palace"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/sport_palace"
                        app:layout_constraintEnd_toEndOf="@+id/rb_asanbay"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/rb_asanbay"
                        app:layout_constraintTop_toBottomOf="@+id/rb_cetnter_stadion" />

                    <RadioButton
                        android:id="@+id/rb_nosorog"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/night_club_nosorog"
                        app:layout_constraintEnd_toEndOf="@+id/rb_asanbay"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/rb_asanbay"
                        app:layout_constraintTop_toBottomOf="@+id/rb_sport_palace" />

                    <RadioButton
                        android:id="@+id/rb_philarmonic"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/philarmonic"
                        app:layout_constraintEnd_toEndOf="@+id/rb_asanbay"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/rb_asanbay"
                        app:layout_constraintTop_toBottomOf="@+id/rb_nosorog" />

                    <RadioButton
                        android:id="@+id/rb_retro_metro"
                        style="@style/RadioButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/retro_metro"
                        app:layout_constraintEnd_toEndOf="@+id/rb_asanbay"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/rb_asanbay"
                        app:layout_constraintTop_toBottomOf="@+id/rb_philarmonic" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_choose"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn_rounded_auth"
                android:enabled="false"
                android:text="@string/apply"
                android:textAllCaps="false"
                app:layout_constraintBottom_toTopOf="@+id/btn_clear"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:background="@drawable/btn_rounded_grey"
                android:enabled="false"
                android:text="@string/clear_filter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageView
                android:id="@+id/img_nothing_was_found"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:visibility="gone"
                android:src="@drawable/nothing_was_found"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>