<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.main.theaters.TheaterDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <View
        android:id="@+id/img_overlay"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:background="@drawable/img_concert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_theater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/img_concert"
        app:elevation="1dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/theater_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_theater"
        tools:text="Лебединое озеро. Звезды России" />

    <TextView
        android:id="@+id/theater_place"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/theater_title"
        app:layout_constraintStart_toStartOf="@+id/theater_title"
        app:layout_constraintTop_toBottomOf="@+id/theater_title"
        tools:text="Кыргызский театр оперы и балета" />

    <TextView
        android:id="@+id/theater_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/dark_grey"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/theater_title"
        app:layout_constraintStart_toStartOf="@+id/theater_title"
        app:layout_constraintTop_toBottomOf="@+id/theater_place"
        tools:text="23 сентября" />

    <TextView
        android:id="@+id/theater_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:gravity="center"
        android:textColor="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buy_tickets"
        tools:text="Старинный парк. Принцесса Одетта грустит. Внезапно появляется незнакомец в сопровождении свиты. Это Ротбарт – Злой гений. Он предлагает принцессе руку и сердце, но Одетта отвергает его. Ротбарт превращает ее в белого лебедя." />

    <TextView
        android:id="@+id/btn_theater_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/full_desc"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/theater_description"
        app:layout_constraintStart_toStartOf="@+id/theater_description"
        app:layout_constraintTop_toBottomOf="@+id/theater_description" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_theater_images"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_theater_details" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_buy_tickets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_rounded_auth"
        android:drawableLeft="@drawable/icon_schedule"
        android:drawablePadding="10dp"
        android:paddingHorizontal="50dp"
        android:text="@string/buy_tickets"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/theater_title"
        app:layout_constraintStart_toStartOf="@+id/theater_title"
        app:layout_constraintTop_toBottomOf="@+id/theater_date" />

    <TextView
        android:id="@+id/text_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/schedule"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/rv_theater_images"
        app:layout_constraintTop_toBottomOf="@+id/rv_theater_images" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_schedule" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>